--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "GHD Python snippets",
     "description": "A series of useful python snippets used for Machine Learning, Neural Networks, Image Processing and ...",
     "version": "1.0.0",
+    "publisher": "GHD",
     "engines": {
         "vscode": "^1.67.0"
     },
